k8s/0-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fastapi-dev
  labels:
    name: fastapi-dev
