k8s/1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api-dev
  namespace: fastapi-dev
  labels:
    app: fast-api-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fast-api-dev
  template:
    metadata:
      labels:
        app: fast-api-dev
    spec:
      containers:
        - name: fast-api-dev
          image: dev001001/fast-api-dev:v1.0.0 # Usa tu imagen de Docker
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: config
              subPath: message
              mountPath: /etc/message.txt
      volumes:
        - name: config
          configMap:
            name: config
