k8s/2-service-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: fast-api-dev-balancer
  namespace: fastapi-dev
spec:
  type: LoadBalancer
  selector:
    app: fast-api-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
