k8s/3-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fast-api-dev-service
  namespace: fastapi-dev
spec:
  selector:
    app: fast-api-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
