k8s/4-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fast-api-dev-ingress
  namespace: fastapi-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fast-api-dev-service
                port:
                  number: 80
